Remove buggy per-user visibility check, story arc css fix, book series template
If I end up not doing anything different with the series/story arc/book series templates, I'll eventually move to one and just change the button text.

--- a/comixology2/comixology.css
+++ b/comixology2/comixology.css
@@ -2156,6 +2156,12 @@ strong, b {
     line-height: 22px;
 }
 
+.story_arc_bc_desc p {
+    color: #333;
+    font-size: 14px;
+    line-height: 22px;
+}
+
 .cmx_label {
     font-size: 20px;
     font-weight: 700;
